dashboard and user ui

--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&family=Padauk:wght@400;700&family=Poppins:wght@200;300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&family=Montserrat:wght@300;400;500;600;700;800&family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;1,300;1,400;1,500&family=Poppins:wght@200;300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700&display=swap');
+
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 :root {
-  --Inter: 'Inter', sans-serif;
-  --Padauk: 'Padauk', sans-serif;
-  --Poppins: 'Poppins', sans-serif;
-  --roboto: 'Roboto', sans-serif;
+    --Inter: 'Inter', sans-serif;
+    --Poppins: 'Poppins', sans-serif;
+    --roboto: 'Roboto', sans-serif;
+    --montserrat: 'Montserrat', sans-serif;
+    --opensans: 'Open Sans', sans-serif;
+
 }
 
 html {
-  font-size: 62.4%;
+    font-size: 62.4%;
 }
