--- a/src/assets/css/user.css
+++ b/src/assets/css/user.css
@@ -76,8 +76,11 @@
 
 .card img {
     border-radius: 27px;
+    object-fit: cover;
     width: 100%;
+    height: 30rem;
 }
+
 
 .card_heading {
     padding: 1rem 0 0 0;
