--- a/src/assets/css/homepage.module.css
+++ b/src/assets/css/homepage.module.css
@@ -33,6 +33,16 @@
     margin-left: 1rem;
 }
 
+.background img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    object-fit: cover;
+    height: 100vh;
+    z-index: -1;
+}
+
 .home .max_width {
     padding: 4rem;
     width: 100%;
@@ -40,7 +50,6 @@
     display: flex;
     align-items: center;
     text-align: left;
-    background: #000;
     justify-content: space-between;
 }
 
