--- a/src/assets/css/mintNft.css
+++ b/src/assets/css/mintNft.css
@@ -101,6 +101,13 @@
     padding: 1rem;
 }
 
+.error {
+    padding: 0 2rem;
+    text-align: left;
+    font-size: 1.2rem;
+    color: red;
+}
+
 .mintWarranty {
     cursor: pointer;
     margin-top: 2rem;
