--- a/src/assets/css/mintNft.css
+++ b/src/assets/css/mintNft.css
@@ -4,7 +4,13 @@
     background: #2F3338;
     display: flex;
     justify-content: space-between;
+}
+
+.navbar {
+    width: 100%;
     position: absolute;
+    z-index: 99;
+
 }
 
 .loginContainer, .serialNumber {
@@ -46,7 +52,10 @@
 .mintNft .max_width {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(136.31deg, #0D070F 14.16%, #1F102B 53.39%, #23193E 82.63%);
+    background: -webkit-linear-gradient(to right, #0f0c29, #302b63, #24243e); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0f0c29, #302b63, #24243e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    /*background: linear-gradient(136.31deg, #0D070F 14.16%, #1F102B 53.39%, #23193E 82.63%);*/
     display: flex;
     justify-content: space-between;
     padding: 0 6rem;
@@ -118,6 +127,23 @@
     font-weight: 600;
     color: #fff;
     opacity: 0.8;
+}
+
+.progressBar {
+    height: 1.2rem;
+    border-top: 2px dashed #4f9cc0;
+    z-index: 99;
+    transition: all .5s ease-in-out;
+}
+
+.background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    opacity: 0.2;
+    object-fit: cover;
 }
 
 .background img {
