--- a/src/assets/css/AddSeller.module.css
+++ b/src/assets/css/AddSeller.module.css
@@ -18,6 +18,7 @@
 
 .informationCard {
     z-index: 10;
+    position: relative;
 }
 
 .addSeller .max_width {
@@ -57,13 +58,57 @@
     width: 100%;
     height: 100vh;
     position: absolute;
-    left: 0;
+    left: -10%;
     top: 0;
 }
 
 .background img {
     height: 100vh;
 
+}
+
+.featureItem svg {
+    width: 60px;
+    height: 60px;
+}
+
+.feature {
+    width: 46rem;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.benfits {
+    font-size: 7rem;
+    font-weight: 600;
+    font-family: var(--roboto);
+    position: absolute;
+    left: 30%;
+    bottom: 0;
+    color: #fff;
+    transform: translate(0, -50%);
+}
+
+.featureItem {
+    text-align: left;
+    color: #ffff;
+    font-family: var(--Poppins);
+    font-weight: 400;
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+}
+
+.featureItem svg {
+    width: 60px;
+    height: 60px;
+}
+
+.featureItem span {
+    font-size: 1.5rem;
+    padding-left: 2rem;
 }
 
 .bgcontainer {
@@ -164,10 +209,10 @@ input:-webkit-autofill:active {
 .errMsg {
     margin-top: 1rem;
     color: red;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-family: var(--Poppins);
     font-style: italic;
-    font-weight: 300;
+    font-weight: 500;
 }
 
 .transSuccess {
