--- a/src/assets/css/mintNft.module.css
+++ b/src/assets/css/mintNft.module.css
@@ -60,13 +60,14 @@
     justify-content: space-between;
     padding: 0 6rem;
     align-items: center;
+    overflow: hidden;
 }
 
 .form {
     z-index: 10;
     margin-top: 6rem;
     width: 60rem;
-    height: 80vh;
+    height: 85vh;
     padding: 2rem;
     background: rgba(255, 255, 255, 0.1);
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
