--- a/src/assets/css/validate.css
+++ b/src/assets/css/validate.css
@@ -42,9 +42,6 @@
     margin-bottom: 2rem;
 }
 
-.validateForm {
-    margin-bottom: 10rem;
-}
 
 .validateBtn {
     width: 100%;
@@ -58,11 +55,35 @@
     margin-top: 3rem;
 }
 
+.formContainer {
+    border: 3px solid #1E3C72;
+    border-radius: 1rem;
+    padding: 6rem;
+}
+
 .showNft {
     display: flex;
     flex-direction: column;
     justify-content: center;
     height: 100vh;
+}
+
+.notFound img {
+    margin-top: 2rem;
+    width: 30rem;
+}
+
+.notFound {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    font-size: 6rem;
+    font-weight: 600;
+    font-family: var(--roboto);
+    color: #fff;
+    padding: 2rem 0;
 }
 
 .informationContainer {
